Don't reject slightly unsual webm files
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: padenot, Assigned: padenot)
Details
Attachments
(3 files)
STR:
- Open https://ignace72.eu/lost-delirious-beautiful.html (also attached for posterity)
Expected:
- The video plays
Actual:
- The video doesn't play
The Webm container has a codec_delay of 0, but then when actually decoding the Opus stream, we find that there is a non-zero delay, and we bail. Simply relaxing this check makes it work. This files is played by all other software I've tried.
I can't find a normative text that says that those number should be equal, so we probably should accept this file.
Maybe a bad muxer? This file appears to have been produced with ffmpeg, maybe with youtube-dl or something.
| Assignee | ||
Comment 1•5 years ago
|
||
(In reply to Paul Adenot (:padenot) from comment #0)
The Webm container has a
codec_delayof0
After looking at the file in more detail, it simply doesn't have a delay field.
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
This is the file attached to the bug, trimmed right after the first cluster:
truncate --size=66250 ~/lost-delirious-beautiful-1-trimmed.webm
Depends on D109705
| Assignee | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/af90373d8ef6
https://hg.mozilla.org/mozilla-central/rev/81294dc587fe
Description
•