Bug 1700903 - Don't reject file when webm codec delay and opus pre-skip do not match. r=kinetik

Differential Revision: https://phabricator.services.mozilla.com/D109705