dom/media/platforms/agnostic/OpusDecoder.cpp
@@ -110,8 +110,9 @@ RefPtr<MediaDataDecoder::InitPromise> OpusDataDecoder::Init() {
 
   if (codecDelay !=
       FramesToUsecs(mOpusParser->mPreSkip, mOpusParser->mRate).value()) {
-    NS_WARNING("Invalid Opus header: CodecDelay and pre-skip do not match!");
-    return InitPromise::CreateAndReject(NS_ERROR_DOM_MEDIA_FATAL_ERR, __func__);
+    NS_WARNING(
+        "Invalid Opus header: container CodecDelay and Opus pre-skip do not "
+        "match!");
   }
 
   if (mInfo.mRate != (uint32_t)mOpusParser->mRate) {
